--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -155,6 +155,7 @@ input::placeholder {color: #cccccc; font-style: italic;}
 .container .title p{margin-top:10px;font-size:14px;color:#595959;font-weight:normal;}
 .write {text-align: right}
 .write_inner{width: 100%;max-width:850px;margin:0 auto;padding:0 5px;box-sizing:border-box;}
+.write_inner span{margin-right:10px}
 .write_inner i {margin-right:5px;}
 .write .write_show{margin-right:5px;border:1px solid #cecece;background-color: #fff;color:#999;}
 .write_inner>a,.btn_search a{display:inline-block;padding:8px 20px;border-radius: 3px;background-color:#007bff;text-align: center;color:#fff;font-size: 14px;}
